# RustShell

./: Cargo.toml  LICENSE  README.md
src/: banner.rs  main.rs  templates.rs
